tests/invalid_lex/lex06.java
class Main {
    static String a = "
